<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.players.DetailPlayerActivity">


    <ImageView
        android:id="@+id/playerGambar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/playerGambar"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/playerNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/player"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/playerNameDetail"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_kg"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height_m"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/linear1"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/dark_gray"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/dark_gray"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

            <TextView
                android:id="@+id/playerInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_below="@id/linear2"
                android:text="@string/loremIpsum"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>