<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/light_yellow">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dateView"
                android:textColor="@color/black"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/timeEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="15sp"/>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/homeTeamName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/homeTeam"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />
                    
                    <TextView
                        android:id="@+id/homeTeamScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/homeScore"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/versus"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:id="@+id/awayTeamScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/homeScore"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/awayTeamName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:gravity="center"
                        android:text="@string/barcelona"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>