<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageTeam"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="200dp"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:text="@string/juventus"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:shadowColor="@color/white"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/stadiumName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/stadium"
                android:textColor="@color/white"
                android:shadowColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coachName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:shadowColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:text="@string/coach"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </android.support.design.widget.CollapsingToolbarLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/playerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:background="@color/light_yellow"
            />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpagerTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>