<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Details.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/BADGE_HOME"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    />

                <ImageView
                    android:id="@+id/BADGE_AWAY"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="horizontal"
                android:layout_below="@id/linear0">

                <TextView
                    android:id="@+id/HOME_NAME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Home"
                    android:textSize="20sp"
                    android:textColor="@color/blue_violet"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"/>

                <TextView
                    android:id="@+id/AWAY_NAME"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Away"
                    android:textSize="20sp"
                    android:textColor="@color/dark_red"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear1"
                android:paddingVertical="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HOME_SCORE"
                    android:text="@string/zero"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/versus"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AWAY_SCORE"
                    android:text="@string/zero"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear2"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HOME_SCORERS"
                    android:text="@string/zero"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goalers"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AWAY_SCORERS"
                    android:text="@string/zero"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear3"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HOME_YELLOW"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellowcard"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AWAY_YELLOW"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear4"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HOME_RED"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/redcard"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AWAY_RED"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear5"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HOME_FORWARD"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Forward"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AWAY_FORWARD"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear6"
                android:layout_marginTop="45dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HOME_MIDFIELDER"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Midfielder"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AWAY_MIDFIELDER"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear7"
                android:layout_marginTop="45dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HOME_DEFENDER"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Defender"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AWAY_DEFENDER"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear8"
                android:layout_marginTop="45dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HOME_KEEPER"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Keeper"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.7"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/AWAY_KEEPER"
                    android:text="@string/strip"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="0.6"
                    />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>